# populse_mia

./: #.travis.yml  .codecov.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  README.md  appveyor.yml  appveyor.yml.orig  generate_requirements.py  pyproject.toml  setup.py
#processes/User_processes/: __init__.py  test_pipeline_2.py  test_pipeline_3.py
.github/workflows/: codeql-analysis.yml
developer_doc/: HowToDoAdeployment.md  HowToRunMRIQC.md  UsingVirtualisation.md  download_spm12_standalone.md  download_spm12_standalone.txt  install_MIA_in_a_virtual_environment  install_config.md  sphinx_tutorial.md  ticket_191  ticket_191.md
docs/: Makefile
docs/doctrees/: .environment.pickle.swp  .environment_BASE_352.pickle.swp  .environment_LOCAL_352.pickle.swp  .environment_REMOTE_352.pickle.swp  environment.pickle  environment_BASE_352.pickle  environment_LOCAL_352.pickle  environment_REMOTE_352.pickle  index.doctree  modules.doctree  populse_mia.data_manager.doctree  populse_mia.doctree  populse_mia.user_interface.data_browser.doctree  populse_mia.user_interface.data_viewer.anatomist.doctree  populse_mia.user_interface.data_viewer.anatomist_2.doctree  populse_mia.user_interface.data_viewer.doctree  populse_mia.user_interface.doctree  populse_mia.user_interface.pipeline_manager.doctree  populse_mia.utils.doctree
docs/html/: .buildinfo  .buildinfo.bak  api.html  genindex.html  index.html  modules.html  objects.inv  populse_mia.data_manager.html  populse_mia.html  populse_mia.user_interface.data_browser.html  populse_mia.user_interface.data_viewer.anatomist.html  populse_mia.user_interface.data_viewer.anatomist_2.html  populse_mia.user_interface.data_viewer.html  populse_mia.user_interface.html  populse_mia.user_interface.pipeline_manager.html  populse_mia.utils.html  py-modindex.html  search.html  searchindex.js
docs/source/: api.rst  conf.py  index.rst  modules.rst  populse_mia.data_manager.rst  populse_mia.rst  populse_mia.user_interface.pipeline_manager.rst  populse_mia.user_interface.rst  populse_mia.utils.rst
populse_mia/: __init__.py  __main__.py  cli_args.py  info.py  main.py  software_properties.py  test.py
populse_mia/data_manager/: Modalities_BIDS.yml  __init__.py  data_history_inspect.py  data_loader.py  database.py  database_mia.py  export_bids.py  filter.py  project.py  project_properties.py
populse_mia/sources_images/: __init__.py
populse_mia/tests/: __init__.py  run_mia_test.py
populse_mia/user_interface/: __init__.py  main_window.py  pop_ups.py
populse_mia/utils/: __init__.py  (+1 more)
properties/: config.yml  saved_projects.yml
(+395 files in other folders)
