[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "populse_mia"
dynamic = ["version"]
authors = [
    {name = "Populse team", email = "populse-support@univ-grenoble-alpes.fr"},
]
description = "populse_mia"
readme = "README.md"
requires-python = ">=3.10"
license = "CECILL-B"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "argon2-cffi==25.1.0",
    "capsul >= 2.6.0, < 3.0.0",
    "cryptography",
    "matplotlib",
    "mia-processes >= 2.7.0, < 3.0.0",
    "nibabel",
    "nipype",
    "pillow",
    "populse-db >= 3.0.0, < 4.0.0",
    "pre-commit",
    "pyqt5",
    "python-dateutil",
    "pyyaml",
    "scikit-image",
    "scipy",
    "snakeviz",
    "soma-base >= 5.3.0, < 6.0.0",
    "soma-workflow >= 3.3.0",
    "six >= 1.13",
    "traits",
]


[project.optional-dependencies]
doc = [
    "sphinx >=1.0",
]

[project.urls]
homepage = "http://populse.github.io/populse_mia/"
repository = "https://github.com/populse/populse_mia"

[tool.setuptools]
packages = ["populse_mia"]

[tool.setuptools.dynamic]
version = {attr = "populse_mia.info.__version__"}

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
atomic = true
profile = "black"
line_length = 79
skip_gitignore = true
#known_first_party = ['populse_mia']

[tool.coverage.run]
omit = [
    "populse_mia/user_interface/data_viewer/anatomist_2/*",
    "populse_mia/user_interface/data_viewer/anatomist/*",
    "processes/*",
    "/tmp/*"
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "processes"]
verbose = 2
quiet = false
color = true
omit-covered-files = false
